RPF inital assement
